# c-homeworks

./: .gitignore  CMakeLists.txt  cmds.txt  environment.yml  package.json
include/session10/: super_assert.h  welcome.h
include/session_5_6/: session5.h
include/session_7/: rectangle.h
src/: CMakeLists.txt  main.c
src/session10/: CMakeLists.txt  README.md  preprocessor_101.c  super_assert_demo.c  welcome.c
src/session8/: CMakeLists.txt  example.txt  main.c  zipf.c
src/session_5_6/: casting_1.c  casting_2.c  main.c  malloc_fun.c  memory_layout_1.c  pointer_shenanigans.c  privilege_escalation.c  session5.c  string_concat.c
src/session_7/: CMakeLists.txt  are_you_aligned.c  main.c  rectangle.c
tests/: CMakeLists.txt  test_session5.c  test_some_library.c
tests/session_7/: rectangle_test.c
